added parts 2, 3 and 4.

--- a/index.html
+++ b/index.html
@@ -32,29 +32,14 @@
       </div>
 
       <form id="inputForm">
-        <input 
-          id="postId" 
-          name="postId" 
-          type="number" 
-          placeholder="Post ID (only for edit)" 
-        />
-        <input 
-          id="title" 
-          name="title" 
-          type="text" 
-          placeholder="Title" 
-          required 
-        />
-        <textarea 
-          id="body" 
-          name="body" 
-          placeholder="Body" 
-          maxlength="500" 
-          required
-        ></textarea>
+        <input id="postId" name="postId" type="number" placeholder="Post ID (only for edit)"/>
+        <input id="title" name="title" type="text" placeholder="Title" required/>
+        <textarea id="body" name="body" placeholder="Body" maxlength="500" required></textarea>
         <button id="submitBtn" type="submit">Submit</button>
       </form>
+      
       <div id="formResponse"></div>
+    
     </section>
   </div>
 </body>
